# cft_internship

./: pyproject.toml
cft_internship/: main.py
tests/: main.py
